welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: not found: value taille
  for (i<- 0 to taille-1){
                ^Array1:23: error: not found: value T
   setCouleurBrosse(T(i));
                    ^