welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
  var taille = getMondeHauteur()
  var T = new Array[Color](taille)
  for (i<- 0 to taille-1){
    T(i)=getCouleurSol()
    avance()
  }
  var largeur = getMondeLargeur();
  left(); avance();right(); 
  for(y<-1 to largeur){
    avance()
    Col()
  }
}
def Brosse() {
  baisseBrosse()
  leveBrosse()
}

def Col() {
  for (i<- 0 to taille-1){
   setCouleurBrosse(T(i));
   Brosse();
   avance();
  }
}